Fix #402, cr=244 whitespaces characters are not respected when rendering an item or comment

--- a/public/rsrcs/css/messaging.css
+++ b/public/rsrcs/css/messaging.css
@@ -168,6 +168,7 @@
 .conversation-message-message {
    margin: 0;
    word-wrap: break-word;
+   white-space:pre-wrap;
 }
 
 .thread-selector-wrapper {
